# rustylist

./: .env.sample  Cargo.toml  README.md  RustyList.postman_collection.json
migrations/2020-03-02-024408_create_tasks_and_users/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
src/models/: paginated.rs  task.rs  user.rs
src/routes/: tasks.rs  users.rs
